# highway-fractal

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: cmake.yml
libs/: CMakeLists.txt  lib.cpp  mandelbrot_dynamic.cpp  mandelbrot_dynamic.h  mandelbrot_static.cpp  mandelbrot_static.h
libs/include/lib/: lib.h
tools/: CMakeLists.txt  main.cpp
